# id3-tag-from-filename

./: .gitignore  filename-to-id3-tag.py  genre-separator.py  pyproject.toml
FileTools/: AudioFile.py  Crawler.py
